tests/snapshots/trace_solver@10890161445745413476.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatOuter
    fallback_to_outer: false
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    dont_eat_mut_inside_shared: false
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
  bundle_name: stateless
  request: "[x]: &[T]"
---
[x] @ s: &[T]
// Applying rule `ConstructorRef`
x @ &(*s).0: &T
// Applying rule `Binding`
let x: &T = &(*s).0

// Final bindings (simplified):
let x: &T = &(*s).0;
